package br.com.dominio.exception;

public class DesenvolvedorNaoMatriculadoEmConteudoException extends RuntimeException {

    public DesenvolvedorNaoMatriculadoEmConteudoException() {
    }

}
